[package]
name = "valence-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { path = "../bytes", default-features = false }
#uuid = { version = "1.11.0", features = ["v4"] }
valence_protocol = { path = "../valence/crates/valence_protocol" }
#futures-util = "0.3.28" # For future combinators

esp-backtrace = { version = "0.14.2", features = [
    "exception-handler",
    "panic-handler",
    "defmt",
]}

esp-hal = { version = "0.22.0", features = [
    "defmt",
] }
esp-alloc = { version = "0.5.0" }
embedded-time       = "=0.12.1"

esp-wifi = { version = "0.11.0", default-features=false, features = [
    "utils",
    "wifi",
    "esp-alloc",
    "defmt",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
defmt            = "0.3.8"
defmt-rtt        = "0.4.1"
esp-hal-embassy  = { version = "0.5.0",  features = ["integrated-timers"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }
critical-section = "1.2.0"

embassy-executor    = { version = "0.6", features = ["task-arena-size-20480"] }
embassy-futures     = "0.1.1"
embassy-net = { version = "0.5.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-time        = "0.3.2"
embedded-can        = "0.4.1"
embedded-hal-async  = "1.0.0"
embedded-io         = { version = "0.6.1", default-features = false }
embedded-io-async   = "0.6.1"
embedded-storage    = "0.3.1"
cfg-if = "1.0.0"
esp-println = { version = "0.12.0", optional = true, features = ["log"] }

# Graphic interface
esp-bsp = { version = "0.4.1", optional = true }
embedded-graphics = { version = "0.8.0", optional = true }
esp-display-interface-spi-dma = {  version = "0.2.0", optional = true }
mipidsi = { version = "0.8.0", optional = true }
embedded-hal = "1.0.0"

[features]
default = [ "esp32-s3-box" ]

esp32s3 = [ "esp-hal/esp32s3", "esp-wifi/esp32s3", "esp-println/esp32s3", "esp-backtrace/esp32s3", "esp-hal-embassy/esp32s3"]
esp32c3 = [ "esp-hal/esp32c3", "esp-wifi/esp32c3", "esp-println/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy/esp32c3"]
esp32c6 = [ "esp-hal/esp32c6", "esp-wifi/esp32c6", "esp-println/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy/esp32c6"]

gui = [ "esp-bsp", "embedded-graphics", "esp-display-interface-spi-dma", "mipidsi" ]

esp32-s3-box = [ "esp32s3", "gui", "esp-bsp/esp32-s3-box", "esp-hal/octal-psram" ]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
